* `mongoc_server_description_ismaster` is removed. Use the equivalent `mongoc_server_description_hello` instead.
* `MONGOC_QUERY_SLAVE_OK` is removed. Use the equivalent `MONGOC_QUERY_SECONDARY_OK` instead.
* `MONGOC_URI_SLAVEOK` is removed. It was unused.
* `mongoc_collection_save` is removed. Use `mongoc_collection_insert_one` or `mongoc_collection_replace_one` instead.

### Forwarding headers (`#include <bson.h>` and `#include <mongoc.h>`)

The compatibility "forwarding" headers have been removed (previously added in 1.13.0). This means it is no longer valid to include the literal header names `mongoc.h` or `bson.h` directly:

```c
#include <bson.h> // No longer provided!
#include <mongoc.h> // No longer provided!
```

Instead, the names must be prefixed with the parent directory: `mongoc/mongoc.h` and `bson/bson.h`:

```c
#include <bson/bson.h>
#include <mongoc/mongoc.h>
```


Changes:

  * URI authentication credentials validation (only applicable during creation of a new `mongoc_uri_t` object from a connection string):
    * `authMechanism` is now validated and returns a client error for invalid or unsupported values.
    * `authSource` is now validated and returns a client error for invalid or unsupported values for the specified `authMechanism`.
    * `authSource` is now correctly defaulted to `"$external"` for MONGODB-AWS (instead of the database name or `"admin"`).
    * The requirement that a password is provided is now enforced when the authentication mechanism is specified for:
      * PLAIN
      * SCRAM-SHA-1
      * SCRAM-SHA-256
    * The requirement that neither or both a username and password is provided (optionally with a `AWS_SESSION_TOKEN`) is now enforced for MONGODB-AWS.
    * `authMechanismProperties` is now prohibited (instead of ignored) when the authentication mechanism is specified for:
      * PLAIN
      * SCRAM-SHA-1
      * SCRAM-SHA-256
      * MONGODB-X509